Fix image overflow issue

--- a/app/styles/modal.css
+++ b/app/styles/modal.css
@@ -16,18 +16,20 @@
 }
 
 .modal-lightbox .modal {
-	width: 75%;
+	max-width: 75%;
+	max-height: 85%;
 	display: flex;
-	background-color: white;
 	flex-direction: column;
-	padding: 2rem;
+	background-color: white;
 	border-radius: .25rem;
+	padding: 2rem;
 	margin: 28px auto;
 }
 
 .modal-body {
 	min-width: 600px;
 	margin: auto;
+	overflow-x: auto;
 }
 
 .modal-close {
